# arxiv-research-agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml
agent/: graph.py  runner.py
api/: app.py
eval/: fixtures.json  harness.py  questions.jsonl  run_eval.py
infra/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
mcp_server/: __main__.py  context.py  server.py  tools.py
rag/: __init__.py  chunker.py  embedder.py  ingest.py  retriever.py  store.py
scripts/: backup_qdrant.py  ingest_arxiv.py  seed_from_fixtures.py  setup_ec2.sh
tests/test_agent/: test_graph.py
tests/test_api/: test_app.py
tests/test_eval/: test_harness.py
tests/test_mcp/: test_tools.py
tests/test_rag/: test_chunker.py  test_ingest.py  test_retriever.py
