[project]
name = "arxiv-research-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.9.0",
    "fastembed>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "langgraph>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-mcp-adapters>=0.2.0",
    "anthropic>=0.28.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "mcp>=1.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.4.0",
    "langchain-community>=0.4.0",
    "langchain-google-vertexai>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["rag*", "agent*", "mcp_server*", "api*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # Python 3.10 AsyncMock GC bug — internal coroutine created during mock teardown.
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
